fix spacing

--- a/src/Cart.css
+++ b/src/Cart.css
@@ -126,8 +126,9 @@ input[type=text10]{
 .contriNum369{
   position: absolute;
   top:380px;
-  left: 89.5%;
+  left: 87.2%;
   font-size: 17px;
+
 
 }
 
