--- a/src/Payment.css
+++ b/src/Payment.css
@@ -203,6 +203,6 @@ input[type=cardholname]{
 .contriNum1{
   position: absolute;
   top:760px;
-  left: 89.5%;
+  left: 87%;
   font-size: 17px;
 }
