--- a/src/Videogame.css
+++ b/src/Videogame.css
@@ -435,7 +435,7 @@ label #cancelbutton1{
 .contriNum3690{
   position: absolute;
   top:380px;
-  left: 85%;
+  left: 83%;
   font-size: 17px;
 
 }
